@@ -4673,11 +4673,9 @@ str( ddd <- ...maker(1) )
 str( Ddd <- environment(D)[["..."]] ) # length 1, mode "...":
 str( D2  <- ...maker(TRUE,TRUE))      # length 2, mode "...":
 str( D3n <- ...maker(ch = {cat("HOO!\n"); "arg1"}, 2, three=1+2) )
-if(FALSE) { # not yet
 assertErrV(lD2 <- D2[]) #  type '...' is not subsettable
 assertErrV(D3n[]) #   (ditto)
 assertErrV(D3n[][["three"]]) #  (ditto)
-}
 str( D3n <- ...maker(ch = {cat("HOO!\n"); "arg1"}, 2, three=1+2) )
 stopifnot(exprs = {
     identical(alist(a=)$a, ...maker())# "*the* missing", the empty symbol
@@ -4721,6 +4719,7 @@ Qlis <- list(NULL
 sapply(Qlis, class)
 stopifnot( sapply(Qlis, function(obj) all.equal(obj, obj)) )
 ## only the first failed in R <= 4.0.3
+
 
 ## See PR#18012 -- may well change
 aS <- (function(x) function() NULL)(stop('hello'))
